# Products_Filter

./: CMakeLists.txt  main.cpp
Filter/: BetterFilter.h  MyFilter.h
Product/: Product.h  ProductReporter.h
Specifier/: AndSpecifier.h  ColorSpecifier.h  LessWeightSpecifier.h  OrSpecifier.h  Specifier.h
